tests/NormalTests/paczka1/fuzzy1/12289908.err
Error in line 2: Pfc S413 82,3
Error in line 5: S519 S519 37,3
Error in line 14: EOjT35pS S193 65,1
Error in line 6: Mkx S413 64,4
Error in line 27: EOjT35pS S519 418,97
Error in line 29: S519 S702 65,1
Error in line 32: oHM S702 83,8
